@@ -1,6 +1,6 @@
 <div id="carousel"
      tal:define="context_state context/@@plone_context_state;
-                 folder python:(context_state.is_folderish() and context_state.is_structural_folder()) and context or context.aq_parent;
+                 folder python:(context_state.is_folderish() and context_state.is_structural_folder()) and context or context_state.parent();
                  banners python:[o.getObject() for o in here.portal_catalog(portal_type='Carousel Banner', path='/'.join(folder.getPhysicalPath()) + '/carousel', sort_on='getObjPositionInParent')]"
      tal:condition="banners">
 
